--- a/pokemon/test.html
+++ b/pokemon/test.html
@@ -26,14 +26,14 @@
         <div class="card">
             <div class="card-content">
                 <div class="sprite-container">
-                    <img alt="Sprite" id="sprite" width="150" height="150">
+                    <img alt="Sprite" src="" id="sprite" width="150" height="150">
                 </div>
                 <div class="info">
-                    <div class="pokedex-number">#001</div>
-                    <h1 id="name">Bulbasaur</h1>
-                    <p>A strange seed was planted on its back at birth. The plant sprouts and grows with this Pokémon.</p>
+                    <div class="pokedex-number" id="number">#001</div>
+                    <h1 id="name">b</h1>
+                    <p id="description">A strange seed was planted on its back at birth. The plant sprouts and grows with this Pokémon.</p>
                     <div class="stats">
-                        <div>HP: 45</div>
+                        <div id="HP">HP: 1</div>
                         <div>ATK: 49</div>
                         <div>DEF: 49</div>
                         <div>SpA: 65</div>
