--- a/pokemon/test.html
+++ b/pokemon/test.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
-        /* Bounce animation */
         @keyframes bounce {
             0% {
                 transform: translateY(0);
@@ -76,6 +75,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="absolute bottom-2 w-full text-center text-xs text-gray-200 text-opacity-50">
+        Made with 🤍 by Olive & Coolplant
     </div>
 
     <script src="js/test.js"></script>
