--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -32,7 +32,7 @@
     <div class="w-full max-w-4xl p-8">
         <header class="mb-8">
             <div class="flex justify-center mb-8">
-                <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 649.18 651.56"
+                <svg id="pokeball" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 649.18 651.56"
                     class="w-auto h-16 md:h-20 lg:h-24 bounce">
                     <path class="fill-[#010101]"
                         d="M1007.12,545.21a354.12,354.12,0,0,1,24.34,56.25A323.39,323.39,0,0,1,1013,849.3c-53.62,106.54-168.42,179.59-288,180.51-120.14.92-231.84-69.38-288.12-174.54a323.79,323.79,0,0,1-34.53-104.18c-6.28-40.65-4.19-80.93,4.62-121,3.8-17.24,8.5-34.42,15.56-50.41C448.93,519.86,487.85,470,542.94,433.48,625.15,379,731,362.94,825.07,393.81,903.28,419.48,965.65,475,1007.12,545.21Z"
@@ -43,7 +43,7 @@
                     <path class="fill-[#fff]"
                         d="M1005.15,772.87C972.71,904.18,852.81,1009.8,700.69,999.36,550.07,989,456,870.65,438.07,773.59c12.44,5.84,24.66,11.85,37.1,17.36,48,21.24,98.1,34.87,150,42.35a35.35,35.35,0,0,0,4.21.53c15.89.44,27.15,7.09,38.78,19.09,36.65,37.84,96.61,30.65,126-13.1a9.74,9.74,0,0,1,7.5-4.52,603.9,603.9,0,0,0,153.73-39.54c12.89-5.19,25.37-11.4,38-17.18C997,776.92,1000.55,775.11,1005.15,772.87Z"
                         transform="translate(-398.71 -378.26)" />
-                    <path class="fill-[#fff]"
+                    <path id="poke-button" class="fill-[#fff]"
                         d="M725.21,741c29.68-.09,54.31,24.24,54.34,53.7s-24.54,54-54.17,53.89a53.4,53.4,0,0,1-53.61-53.38C671.65,765,695.21,741.09,725.21,741Z"
                         transform="translate(-398.71 -378.26)" />
                 </svg>
@@ -63,7 +63,7 @@
             </div>
         </header>
 
-        <div id="main-box" class="relative p-6 bg-[#ed1e25] max-w-3xl rounded-2xl shadow-lg mx-auto">
+        <div id="main-box" class="relative p-6 bg-[#d32f2f] max-w-3xl rounded-2xl shadow-lg mx-auto">
             <div class="flex items-center">
                 <div class="mr-8">
                     <img alt="Sprite" src="" id="sprite" width="200" height="200" class="">
@@ -73,12 +73,12 @@
                     <h1 id="name" class="text-2xl font-bold mb-4">b</h1>
                     <p id="description" class="mb-4">Descrizione</p>
                     <div class="stats grid grid-cols-2 gap-2 mb-6">
-                        <div class="p-2 text-center text-gray-900 bg-[#C6E2FF] rounded-lg shadow">HP: 1</div>
-                        <div class="p-2 text-center text-gray-900 bg-[#FFA07A] rounded-lg shadow">ATK: 1</div>
-                        <div class="p-2 text-center text-gray-900 bg-[#98FB98] rounded-lg shadow">DEF: 1</div>
-                        <div class="p-2 text-center text-gray-900 bg-[#B0E0E6] rounded-lg shadow">SpA: 1</div>
-                        <div class="p-2 text-center text-gray-900 bg-[#AFEEEE] rounded-lg shadow">SpD: 1</div>
-                        <div class="p-2 text-center text-gray-900 bg-[#FFB6C1] rounded-lg shadow">SPD: 1</div>
+                        <div class="p-2 text-center text-gray-900 bg-green-400 rounded-lg hover:shadow-2xl transition duration-300">HP: 1</div>
+                        <div class="p-2 text-center text-gray-900 bg-yellow-400 rounded-lg hover:shadow-2xl transition duration-300">ATK: 1</div>
+                        <div class="p-2 text-center text-gray-900 bg-orange-400 rounded-lg hover:shadow-2xl transition duration-300">DEF: 1</div>
+                        <div class="p-2 text-center text-gray-900 bg-cyan-500 rounded-lg hover:shadow-2xl transition duration-300">SpA: 1</div>
+                        <div class="p-2 text-center text-gray-900 bg-purple-400 rounded-lg hover:shadow-2xl transition duration-300">SpD: 1</div>
+                        <div class="p-2 text-center text-gray-900 bg-pink-400 rounded-lg hover:shadow-2xl transition duration-300">SPD: 1</div>
                     </div>
                     <div>
                         <h2 class="text-lg mb-2">Abilità</h2>
@@ -87,11 +87,13 @@
                     </div>
                 </div>
             </div>
+
+            <div id="fade" style="z-index: 999;" class="fixed inset-0 bg-[#fff] opacity-0 pointer-events-none transition-opacity duration-700"></div>
         
             <!-- Center the button and make it wider -->
             <div class="flex justify-center mt-4"> <!-- Added margin-top to the button wrapper -->
                 <button id="save-button" onclick="savePokemon()"
-                    class="mt-6 mb-0 w-full max-w-3xl p-3 bg-green-500 text-white rounded-lg hover:bg-green-600 hover:shadow-xl transition duration-300">
+                    class="mt-6 mb-0 w-full max-w-3xl p-3 bg-[#40a545] text-white rounded-lg hover:bg-[#317c34] hover:shadow-xl transition duration-300">
                     Aggiungi alla squadra
                 </button>
             </div>
