--- a/Pokedex-main/index.html
+++ b/Pokedex-main/index.html
@@ -59,7 +59,7 @@
 
 
     <!-- POP UP DI INFORMAZIONE-->
-    <button id="info-button" class="fixed top-4 right-4 p-4 bg-blue-500 text-white text-xl rounded-full shadow-lg hover:bg-blue-600 transition-all duration-300">ℹ️ Info</button>
+    <button id="info-button" class="fixed top-4 right-4 p-4 bg-blue-500 text-white text-xl rounded-full shadow-lg hover:bg-blue-600 transition-all duration-300 hover:scale-110">ℹ️ Info</button>
     <div
     id="popup-overlay"
     class="hidden fixed inset-0 bg-black bg-opacity-50 z-[9998] pointer-events-auto">
@@ -200,7 +200,7 @@
               <span id="genderContainer" class="text-2xl">♂️</span>
 
               <div id="type-container" class="flex gap-2 top-1"></div>
-              <button type="button" id="play-cry"><img src="sound-waves.png" alt="audio" class="size-9"></button>
+              <button type="button" id="play-cry"><img src="sound-waves.png" alt="audio" class="size-9 hover:animate-pulse"></button>
             </div>
 
             <div class="bg-[#243629] bg-opacity-80 rounded-xl">
@@ -256,13 +256,13 @@
         ></div>
 
         <div class="flex justify-center mt-4">
+            
           <button
             id="save-button"
             onclick="savePokemon()"
-            class="mt-6 mb-0 w-full max-w-3xl p-3 bg-[#40a545] text-white rounded-lg hover:bg-[#317c34] hover:shadow-xl transition duration-300"
-          >
-            Aggiungi alla squadra
-          </button>
+            class="mt-6 mb-0 w-full max-w-3xl p-3 bg-[#40a545] text-white rounded-lg hover:bg-[#317c34] hover:shadow-xl transition duration-300 hover:scale-95">
+                Aggiungi alla squadra</button>
+            
         </div>
       </div>
     </div>
