--- a/Pokedex-main/Pokedex-main/index.html
+++ b/Pokedex-main/Pokedex-main/index.html
@@ -42,7 +42,7 @@
 <body class="relative flex items-center justify-center min-h-screen bg-[#0f0f0f] text-white font-sans overflow-x-hidden">
     <!-- dd092f -->
     <div id="bg-pokeballs"
-        class="absolute w-full h-full z-0 bg-[url(assets/Pokeball.svg)] bg-[length:75px_75px] bg-repeat-space"></div>
+        class="absolute w-full h-full z-0 bg-[url(assets/p okeball.svg)] bg-[length:75px_75px] bg-repeat-space"></div>
 
     <!-- POP UP DI INFORMAZIONE-->
     <button id="info-button"
